--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,26 @@
   <link rel="stylesheet" href="Static/Css/Style.css">
 </head>
 <body>
-  
+  <!-- Header -->
+  <header>
+    <ul>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </header>
+  <main>
+  <div id="Cover">
+    <img src="" />
+  </div>
+  <div id="Tittle">
+    <h2>Marino – Lust (feat. Alexandria)</h2>
+  </div>
+  <div id="Lyric">
+    <p>
+      
+    </p>
+  </div>
+  </main>
 </body>
 </html>
