--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
   </header> -->
   <main>
   <div id="Cover">
-    <img src="" />
+    <img src="https://t2.genius.com/unsafe/430x430/https%3A%2F%2Fimages.genius.com%2F485e1ffdcb096f861df00591e918a8d0.1000x1000x1.png" alt="Album cover" class="img-glass" />
   </div>
   <div id="Tittle">
     <h2>Marino – Lust (feat. Alexandria)</h2>
