Made a Responsive it

--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,7 @@
     </ul>
   </header> -->
   <main>
+  <div class="wrapper-main">
   <div id="Cover">
     <img src="https://t2.genius.com/unsafe/430x430/https%3A%2F%2Fimages.genius.com%2F485e1ffdcb096f861df00591e918a8d0.1000x1000x1.png" alt="Album cover" class="img-glass" />
   </div>
@@ -79,6 +80,7 @@ She's a siren leading broken men out to the sea
 Pride is wildfire devouring every leaf
 Blind and empty, you can't fall in love with Lust (Pride)
 </div>
+  </div>
   </div>
   </main>
 </body>
