--- a/Index.html
+++ b/Index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <!-- Abas -->
-  <link rel="stylesheet" href="./Static/Css/Style.css">
-</head>
-<body>
-  <!--
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <!-- Abas -->
+    <link rel="stylesheet" href="./Static/Css/Style.css" />
+  </head>
+  <body>
+    <!--
   <header>
     <ul>
       <li></li>
@@ -17,71 +17,66 @@
       <li></li>
     </ul>
   </header> -->
-  <main>
-  <div class="wrapper-main">
-  <div id="Cover">
-    <img src="https://t2.genius.com/unsafe/430x430/https%3A%2F%2Fimages.genius.com%2F485e1ffdcb096f861df00591e918a8d0.1000x1000x1.png" alt="Album cover" class="img-glass" />
-  </div>
-  <div id="Tittle">
-    <h2>Marino – Lust (feat. Alexandria)</h2>
-  </div>
-  <div id="Lyric">
-    <div class="chorus">
-      [Chorus: Marino]
-Her name is Lust
-She's fooled the mightiest of men
-Nations crumble from within
-All it takes is just one sin
-Lips red as blood
-She'll take your money and she'll run
-Oh, her beauty is a gun
-No, you can't fall in love with Lust
-    </div>
-    <div class="Verse">
-[Verse 1: Marino]
-That's what I called her the night I saw her texting a guy
-A subtle look in her eyes, told me she
-Cheated and lied, and it hurt me inside
-She stabbed my heart with a knife, then told my friends with a sigh
-    </div>
-  <div class="chorus">
-[Chorus: Alexandria]
-His name is Pride
-He's never wrong and always right
-Stares for hours at his might
-Oh, his darkness lies inside
-Sharp as a knife
-Never a doubt inside his mind
-But his ego makes him blind
-No, you can't fall in love with Pride
-</div>
-<div class="Verse">
-[Verse 2: Alexandria]
-That's what I had to decide the moment I realized
-He'd never budge in his mind, saying I
-Cheated and lied and it hurt me inside
-And when I started to cry, he yelled at me with despise
-</div>
-<dic id="bridge">
-[Bridge: Marino, Alexandria, Both]
-Your name is Lust (Your name is Pride)
-You looked at me with sinful eyes
-You never learned to compromise
-You only loved me in the night
-Leave while you can (I wish I ran)
-Pride is a foolish, broken man
-Lust will kill you with her demands
-No, you can't fall in love with (Hahaha)
-</dic>
-<div id="outro">
-[Outro: Marino, Alexandria, Both]
-Lust is poisonous, like ivy on a tree
-She's a siren leading broken men out to the sea
-Pride is wildfire devouring every leaf
-Blind and empty, you can't fall in love with Lust (Pride)
-</div>
-  </div>
-  </div>
-  </main>
-</body>
+    <main>
+      <section class="index-flex index-all">
+        <center>
+        <div class="wrapper-main">
+          <div id="Tittle">
+            <h2>Marino – Lust<br>(FEAT. Alexandria)</h2>
+          </div>
+          <div id="Cover">
+            <img
+              src="https://t2.genius.com/unsafe/430x430/https%3A%2F%2Fimages.genius.com%2F485e1ffdcb096f861df00591e918a8d0.1000x1000x1.png"
+              alt="Album cover"
+              class="img-glass" />
+          </div>
+          <div id="Lyric">
+            <div class="chorus">
+              [Chorus: Marino]<br> 
+              Her name is Lust She's fooled the mightiest of
+              men Nations crumble from within All it takes is just one sin Lips
+              red as blood She'll take your money and she'll run Oh, her beauty
+              is a gun No, you can't fall in love with Lust
+            </div>
+            <div class="Verse">
+              [Verse 1: Marino]<br> 
+              That's what I called her the night I saw her
+              texting a guy A subtle look in her eyes, told me she Cheated and
+              lied, and it hurt me inside She stabbed my heart with a knife,
+              then told my friends with a sigh
+            </div>
+            <div class="chorus">
+              [Chorus: Alexandria] <br>
+              His name is Pride He's never wrong and always
+              right Stares for hours at his might Oh, his darkness lies inside
+              Sharp as a knife Never a doubt inside his mind But his ego makes
+              him blind No, you can't fall in love with Pride
+            </div>
+            <div class="Verse">
+              [Verse 2: Alexandria] <br>
+              That's what I had to decide the moment I
+              realized He'd never budge in his mind, saying I Cheated and lied
+              and it hurt me inside And when I started to cry, he yelled at me
+              with despise
+            </div>
+            <dic id="bridge">
+              [Bridge: Marino, Alexandria, Both]<br>
+               Your name is Lust (Your name is
+              Pride) You looked at me with sinful eyes You never learned to
+              compromise You only loved me in the night Leave while you can (I
+              wish I ran) Pride is a foolish, broken man Lust will kill you with
+              her demands No, you can't fall in love with (Hahaha)
+            </dic>
+            <div id="outro">
+              [Outro: Marino, Alexandria, Both]<br> Lust is poisonous, like ivy on a
+              tree She's a siren leading broken men out to the sea Pride is
+              wildfire devouring every leaf Blind and empty, you can't fall in
+              love with Lust (Pride)
+            </div>
+          </div>
+        </div>
+        </center>
+      </section>
+    </main>
+  </body>
 </html>
