--- a/Index.html
+++ b/Index.html
@@ -19,63 +19,68 @@
   </header> -->
     <main>
       <section class="index-flex index-all">
-        <center>
-        <div class="wrapper-main">
-          <div id="Tittle">
-            <h2>Marino – Lust<br>(FEAT. Alexandria)</h2>
-          </div>
-          <div id="Cover">
-            <img
-              src="https://t2.genius.com/unsafe/430x430/https%3A%2F%2Fimages.genius.com%2F485e1ffdcb096f861df00591e918a8d0.1000x1000x1.png"
-              alt="Album cover"
-              class="img-glass" />
-          </div>
-          <div id="Lyric">
-            <div class="chorus">
-              [Chorus: Marino]<br> 
-              Her name is Lust She's fooled the mightiest of
-              men Nations crumble from within All it takes is just one sin Lips
-              red as blood She'll take your money and she'll run Oh, her beauty
-              is a gun No, you can't fall in love with Lust
-            </div>
-            <div class="Verse">
-              [Verse 1: Marino]<br> 
-              That's what I called her the night I saw her
-              texting a guy A subtle look in her eyes, told me she Cheated and
-              lied, and it hurt me inside She stabbed my heart with a knife,
-              then told my friends with a sigh
-            </div>
-            <div class="chorus">
-              [Chorus: Alexandria] <br>
-              His name is Pride He's never wrong and always
-              right Stares for hours at his might Oh, his darkness lies inside
-              Sharp as a knife Never a doubt inside his mind But his ego makes
-              him blind No, you can't fall in love with Pride
-            </div>
-            <div class="Verse">
-              [Verse 2: Alexandria] <br>
-              That's what I had to decide the moment I
-              realized He'd never budge in his mind, saying I Cheated and lied
-              and it hurt me inside And when I started to cry, he yelled at me
-              with despise
-            </div>
-            <dic id="bridge">
-              [Bridge: Marino, Alexandria, Both]<br>
-               Your name is Lust (Your name is
-              Pride) You looked at me with sinful eyes You never learned to
-              compromise You only loved me in the night Leave while you can (I
-              wish I ran) Pride is a foolish, broken man Lust will kill you with
-              her demands No, you can't fall in love with (Hahaha)
-            </dic>
-            <div id="outro">
-              [Outro: Marino, Alexandria, Both]<br> Lust is poisonous, like ivy on a
-              tree She's a siren leading broken men out to the sea Pride is
-              wildfire devouring every leaf Blind and empty, you can't fall in
-              love with Lust (Pride)
-            </div>
+        <div class="card-container">
+          <div class="content-top">
+            <center>
+              <div class="wrapper-main">
+                <div id="Tittle">
+                  <h2>Marino – Lust<br />(FEAT. Alexandria)</h2>
+                </div>
+                <div id="Cover">
+                  <img
+                    src="https://t2.genius.com/unsafe/430x430/https%3A%2F%2Fimages.genius.com%2F485e1ffdcb096f861df00591e918a8d0.1000x1000x1.png"
+                    alt="Album cover"
+                    class="img-glass" />
+                </div>
+                <div id="Lyric" class="Lyric">
+                  <div class="chorus">
+                    [Chorus: Marino]<br />
+                    Her name is Lust She's fooled the mightiest of men Nations
+                    crumble from within All it takes is just one sin Lips red as
+                    blood She'll take your money and she'll run Oh, her beauty
+                    is a gun No, you can't fall in love with Lust
+                  </div>
+                  <div class="Verse">
+                    [Verse 1: Marino]<br />
+                    That's what I called her the night I saw her texting a guy A
+                    subtle look in her eyes, told me she Cheated and lied, and
+                    it hurt me inside She stabbed my heart with a knife, then
+                    told my friends with a sigh
+                  </div>
+                  <div class="chorus">
+                    [Chorus: Alexandria] <br />
+                    His name is Pride He's never wrong and always right Stares
+                    for hours at his might Oh, his darkness lies inside Sharp as
+                    a knife Never a doubt inside his mind But his ego makes him
+                    blind No, you can't fall in love with Pride
+                  </div>
+                  <div class="Verse">
+                    [Verse 2: Alexandria] <br />
+                    That's what I had to decide the moment I realized He'd never
+                    budge in his mind, saying I Cheated and lied and it hurt me
+                    inside And when I started to cry, he yelled at me with
+                    despise
+                  </div>
+                  <dic id="bridge">
+                    [Bridge: Marino, Alexandria, Both]<br />
+                    Your name is Lust (Your name is Pride) You looked at me with
+                    sinful eyes You never learned to compromise You only loved
+                    me in the night Leave while you can (I wish I ran) Pride is
+                    a foolish, broken man Lust will kill you with her demands
+                    No, you can't fall in love with (Hahaha)
+                  </dic>
+                  <div id="outro">
+                    [Outro: Marino, Alexandria, Both]<br />
+                    Lust is poisonous, like ivy on a tree She's a siren leading
+                    broken men out to the sea Pride is wildfire devouring every
+                    leaf Blind and empty, you can't fall in love with Lust
+                    (Pride)
+                  </div>
+                </div>
+              </div>
+            </center>
           </div>
         </div>
-        </center>
       </section>
     </main>
   </body>
