After call parsa2

--- a/Index.html
+++ b/Index.html
@@ -9,19 +9,8 @@
     <link rel="stylesheet" href="./Static/Css/Style.css" />
   </head>
   <body>
-    <!--
-  <header>
-    <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
-  </header> -->
-    <main>
-      <section class="index-flex index-all">
         <div class="card-container">
-          <div class="content-top">
-            <center>
+          <div class="content-top" style="text-align: center;">
               <div class="wrapper-main">
                 <div id="Tittle">
                   <h2>Marino – Lust<br />(FEAT. Alexandria)</h2>
@@ -78,10 +67,8 @@
                   </div>
                 </div>
               </div>
-            </center>
           </div>
         </div>
-      </section>
     </main>
   </body>
 </html>
