--- a/Index.html
+++ b/Index.html
@@ -22,44 +22,44 @@
                     class="img-glass" />
                 </div>
                 <div id="Lyric" class="Lyric">
-                  <div class="chorus">
-                    [Chorus: Marino]<br/>
+                  <div class="chorus"><span class="titlesLyric" style="text-align: center;">
+                    [Chorus: Marino]<br/></span>
                     Her name is Lust She's fooled the mightiest of men Nations
                     crumble from within All it takes is just one sin Lips red as
                     blood She'll take your money and she'll run Oh, her beauty
                     is a gun No, you can't fall in love with Lust
                   </div>
-                  <div class="Verse">
-                    [Verse 1: Marino]<br/>
+                  <div class="Verse"><span class="titlesLyric" style="text-align: center;">
+                    [Verse 1: Marino]<br/></span>
                     That's what I called her the night I saw her texting a guy A
                     subtle look in her eyes, told me she Cheated and lied, and
                     it hurt me inside She stabbed my heart with a knife, then
                     told my friends with a sigh
                   </div>
-                  <div class="chorus">
-                    [Chorus: Alexandria] <br />
+                  <div class="chorus"><span class="titlesLyric" style="text-align: center;">
+                    [Chorus: Alexandria] <br/></span>
                     His name is Pride He's never wrong and always right Stares
                     for hours at his might Oh, his darkness lies inside Sharp as
                     a knife Never a doubt inside his mind But his ego makes him
                     blind No, you can't fall in love with Pride
                   </div>
-                  <div class="Verse">
-                    [Verse 2: Alexandria] <br />
+                  <div class="Verse"><span class="titlesLyric" style="text-align: center;">
+                    [Verse 2: Alexandria] <br/></span>
                     That's what I had to decide the moment I realized He'd never
                     budge in his mind, saying I Cheated and lied and it hurt me
                     inside And when I started to cry, he yelled at me with
                     despise
                   </div>
-                  <dic id="bridge">
-                    [Bridge: Marino, Alexandria, Both]<br />
+                  <dic id="bridge"><span class="titlesLyric" style="text-align: center;">
+                    [Bridge: Marino, Alexandria, Both]<br/></span>
                     Your name is Lust (Your name is Pride) You looked at me with
                     sinful eyes You never learned to compromise You only loved
                     me in the night Leave while you can (I wish I ran) Pride is
                     a foolish, broken man Lust will kill you with her demands
                     No, you can't fall in love with (Hahaha)
                   </dic>
-                  <div id="outro">
-                    [Outro: Marino, Alexandria, Both]<br />
+                  <div id="outro"><span class="titlesLyric" style="text-align: center;">
+                    [Outro: Marino, Alexandria, Both]<br/> </span>
                     Lust is poisonous, like ivy on a tree She's a siren leading
                     broken men out to the sea Pride is wildfire devouring every
                     leaf Blind and empty, you can't fall in love with Lust
